--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -41,7 +41,7 @@
   <h5>8. Is the article in-depth enough for this topic?</h5>
   <p>Editors use their best judgement to determine if the average reader will be satisfied given the information. List articles often should be longer (ie. giving 15+ examples rather than 5), however going more in-depth with each one can also suffice. As a rule of thumb, an article should be around 1000 words on <a href="https://wordcounter.net/" target="_blank">https://wordcounter.net/</a> but this is a guideline, not the rule. The most important thing is that the reader is given enough information in the article to have learned something new.</p>
   <h5>9. Do all the images fit the criteria?</h5>
-  <p>All images in your article be high quality, free from watermarks, relevant to the article, and found via the guidelines specified in <a href="https://www.theteenmagazine.com/finding-images" target="_blank">Finding Images</a>.</p>
+  <p>All images in your article be high quality, free from watermarks, relevant to the article, and found via the guidelines specified in <a href="https://www.theteenmagazine.com/finding-images" target="_blank">Image Policy</a>.</p>
 
   <h3>Submitting a Draft</h3>
   <p>Once you are confident that your article meets all the <a href="#article-requirements">Article Requirements for Publication</a>, change your article's status to <b>Ready for Review</b> and <b>Save Changes</b>.
@@ -139,7 +139,7 @@
     <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
   </svg>
 
-  <p>Read "<a href="/finding-images">Finding Images</a>" Next →</p>
+  <p>Read "<a href="/finding-images">Image Policy</a>" Next →</p>
 </div>
 
 <script type="text/javascript">
