--- a/app/views/users/dashboard/_guidelines.html.erb
+++ b/app/views/users/dashboard/_guidelines.html.erb
@@ -23,7 +23,7 @@
   <div class="thelink">
     <a href="/finding-images">
       <div class="G5 box foo">
-        <p>Finding Images</p>
+        <p>Image Policy</p>
       </div>
     </a>
   </div>
