--- a/app/views/pages/editor_partials/_pitching_new_articles_content.html.erb
+++ b/app/views/pages/editor_partials/_pitching_new_articles_content.html.erb
@@ -103,7 +103,7 @@
 <p>You'll likely have to change around your title 5-10 times before you have one that is clear and concise, evokes curiosity, and is on a topic teens are searching. Of course, there are always exceptions to the rules but the majority of your pitched article titles should meet these criteria.</p>
 
 <h5>Choosing a thumbnail</h5>
-<p>IMPORTANT: Read <a target="_blank" href="/finding-images">Finding Images</a> first to make sure you are finding images safely!</p>
+<p>IMPORTANT: Read <a target="_blank" href="/finding-images">Image Policy</a> first to make sure you are Image Policy safely!</p>
 <p>Once you've found some images that are royalty free, there are a few tricks to know for choosing a catchy thumbnail image. These are suggestions to keep in mind, not the rule. There are plenty of great thumbnail images that do not adhere to these observations.</p>
 <ul>
   <li>BuzzFeed found that color images relay information faster than black and white ones and so they also perform better.</li>
