--- a/app/views/pages/editor_partials/_reviewing_articles_content.html.erb
+++ b/app/views/pages/editor_partials/_reviewing_articles_content.html.erb
@@ -80,8 +80,8 @@
 </p>
 <p>As a rule of thumb, an article should be around 1000 words on <a target="_blank" href="https://wordcounter.net/">https://wordcounter.net/</a> but this is not set in stone. Use your judgement to determine if the average reader will be satisfied given the information. What could the writer still expand upon? If the answer to this question is important to the topic, mark "Article is too short" and explain why in the Notes field.</p>
 
-<h3 id="ninth-question">9. Do all the images fit the criteria?</h3>
+<h3 id="ninth-question">9. Are all images given proper attribution and are taken from ok sites as explained in the <a target="_blank" href="/finding-images">Image Policy</a>?</h3>
 
-<p>All images should be relevant to the topic, good quality, not contain watermarks, and not be taken from Shutterstock, iStock, or a similar site. Sometimes this is hard to tell but if you <a target="_blank" href="https://support.google.com/websearch/answer/1325808?co=GENIE.Platform%3DAndroid&hl=en">Reverse Image Search</a> the image and a lot of other articles show up using the same image, it is safe to assume that the image is okay to use. Likewise, product pictures that are used in a way for journalistic comment (like a book review) are okay to use because it falls under fair use. For more information on images, read <a target="_blank" href="/finding-images">Image Policy</a>.</p>
+<p>All images should follow the <a target="_blank" href="/finding-images">Image Policy</a>.</p>
 
 <p>If you've reached the end of this list and answered "yes" to all of the questions, you may publish the article on The Teen Magazine.</p>
