--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -84,10 +84,10 @@
                   I have read and understand the image policy found <a target="_blank" class="link_nrml" href="/finding-images">here</a>. By checking this box, I confirm that the images found in my article (including the thumbnail) have the proper attributions and follow all the requirements explained in the Image Policy. I understand that uploading any photo without the rights to use it means that I can be held personally liable for any claims of copyright infringement.
                 </i>
               </p>
-            <% elsif !post.agree_to_image_policy %>
+            <% elsif !@post.agree_to_image_policy %>
               <p>
                 <i>
-                  <%= post.full_name %> has not agreed to the image policy.
+                  <%= @post.user.full_name %> has not agreed to the image policy.
                 </i>
               </p>
             <% end %>
