added thumbnail credits and image policy agreement to pitches for thumbnail

--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -25,6 +25,9 @@
             <a href="/privacy-policy">Privacy Policy</a>
           </li>
           <li>
+            <a href="/copyright-policy">Copyright Policy</a>
+          </li>
+          <li>
             <a href="/search?utf8=✓&filter=all+articles">Search in All Articles</a>
           </li>
           <li>
