--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -111,6 +111,5 @@
   </p>
   <p><strong>Contacting Us</strong></p>
   <p>If there are any questions regarding this privacy policy, you may contact us by through our contact page found here: <a style="color: #4ABEB6" href="http://www.theteenmagazine.com/contact-us" target="_blank">theteenmagazine.com/contact-us</a>.</p>
-  <p>
-    Last Edited on 2023-03-19</p>
+  <p>Last Edited on 2023-03-19</p>
 </div>
