--- a/app/views/posts/_draft_feedback.html.erb
+++ b/app/views/posts/_draft_feedback.html.erb
@@ -33,7 +33,7 @@
           <%= f.hidden_field :post_id, :post_id => @post.id %>
           <%= f.hidden_field :response_to, id: "response_text_form" %>
           <div class="btn_cntnr mb-0 pb-0">
-            <%= f.button "Cancel", class: "newpost--new--profile mr-2 pl-5 pr-5", id: "dismiss-modal", "data-bs-dismiss" => "modal" %>
+            <%= f.label "Cancel", class: "newpost--new--profile mr-2 pl-5 pr-5", id: "dismiss-modal", "data-bs-dismiss" => "modal" %>
             <div class="hide spinner-button spinner-border" role="status">
               <span class="sr-only">Loading...</span>
             </div>
