--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,6 +21,14 @@
       <% end %>
       <p class="mt-0">Write your article here and make sure you are saving often. Saving can also help fix formatting problems.</p>
       <%= f.text_area :content, class: "ckeditor" %>
+            <% if @post.partner_id || current_user.admin %>
+        <p>Disclose partnership:
+          <%= f.check_box :show_disclosure %>
+          <i>
+            You must check this box if you have received any compensation for writing this article. Compensation can be monetary or in the form of a product.
+          </i>
+        </p>
+      <% end %>
       <% if @post.thumbnail.present? %>
         <p>Thumbnail Preview</p>
         <%= image_tag(@post.thumbnail.variant(resize_to_fill: [540,340], format: 'webp'), :class => "image_max_400") %>
@@ -36,22 +44,26 @@
       <% end %>
       <p>Give credit for your thumbnail image (Required). To show correctly, use the formatting: company's name + comma + full url to the site. See placeholder for example.</p>
       <%= f.text_field :thumbnail_credits, placeholder: 'Pexels, https://www.pexels.com/photo/photo-of-woman-looking-on-computer-3059748/', class: "mb-0" %>
-      <p class="d-inline">Category:</p>
-      <%= f.collection_select(:category_id, @categories, :id, :name, {prompt: "Select a Category"}, :class => "mdb-select md-form mb-3") %>
-      <% if @post.partner_id || current_user.admin %>
-        <p>Disclose partnership:
-          <%= f.check_box :show_disclosure %>
+      <% if (@post.user_id.eql? current_user.id) %>
+        <p>
+          Image Policy: <%= f.check_box :agree_to_image_policy %>
+            I have read and understand the image policy found <a target="_blank" style="text-decoration: underline;" href="/finding-images">here</a>. By checking this box, I confirm that the images found in my article (including the thumbnail) have the proper attributions and follow all the requirements explained in the <a target="_blank" style="text-decoration: underline;" href="/finding-image">Image Policy</a>. I understand that uploading any photo without the rights to use it means that I can be held personally liable for any claims of copyright infringement.
+        </p>
+      <% elsif !@post.agree_to_image_policy %>
+        <p>
           <i>
-            You must check this box if you have received any compensation for writing this article. Compensation can be monetary or in the form of a product.
+            <%= @post.user.full_name %> has not agreed to the image policy.
           </i>
         </p>
       <% end %>
+      <p class="d-block">Category:
+      <%= f.collection_select(:category_id, @categories, :id, :name, {prompt: "Select a Category"}, :class => "mdb-select md-form mb-3") %></p>
       <% if @post.is_published? %>
         <p>Turn off commenting:
           <%= f.check_box :comments_turned_off %>
         </p>
       <% end %>
-      <p class="mt-0">If you are writing an article with other writer(s), you may put their emails here to share the article with them. Separate multiple emails with commas.</p>
+      <%# <p class="mt-0">If you are writing an article with other writer(s), you may put their emails here to share the article with them. Separate multiple emails with commas.</p>
       <%= f.text_field :collaboration, placeholder: '(Optional) Email' %>
       <%= f.fields_for :reviews, @review do |rv| %>
         <% if @should_show_editor_form %>
@@ -64,32 +76,17 @@
             <p class="d-inline">Article Status:</p>
             <%= rv.select :status, options_for_select(@statuses || ["In Progress"], @review.try(:status)) %>
             <%= rv.hidden_field :editor_id, value: @review.try(:editor_id) %>
+                  <% if (@post.user_id.eql? current_user.id) && !@post.is_published? %>
+        <p>
+          Editor permission:
+          <%= f.check_box :editor_can_make_changes %>
+            I give permission for an editor to make changes to my article when I submit. These changes may include small improvements to formatting, grammar/punctuation, and/or title optimization.
+        </p>
+      <% end %>
             <% if current_user.admin && @post.is_published? %>
               <div style="float:right; text-align: right;">
                 <p class="mt-0">Featured on homepage: <%= f.check_box :featured %></p>
               </div>
-            <% end %>
-            <% if (@post.user_id.eql? current_user.id) && !@post.is_published? %>
-              <p>
-                <%= f.check_box :editor_can_make_changes %>
-                <i>
-                  I give permission for an editor to make changes to my article when I submit. These changes may include small improvements to formatting, grammar/punctuation, thumbnail image, and/or title optimization.
-                </i>
-              </p>
-            <% end %>
-            <% if (@post.user_id.eql? current_user.id) %>
-              <p>
-                <%= f.check_box :agree_to_image_policy %>
-                <i style="background-color: #FCD04D">
-                  I have read and understand the image policy found <a target="_blank" class="link_nrml" href="/finding-images">here</a>. By checking this box, I confirm that the images found in my article (including the thumbnail) have the proper attributions and follow all the requirements explained in the Image Policy. I understand that uploading any photo without the rights to use it means that I can be held personally liable for any claims of copyright infringement.
-                </i>
-              </p>
-            <% elsif !@post.agree_to_image_policy %>
-              <p>
-                <i>
-                  <%= @post.user.full_name %> has not agreed to the image policy.
-                </i>
-              </p>
             <% end %>
           <% end %>
         <% end %>
