--- a/app/views/newsletters/_form.html.erb
+++ b/app/views/newsletters/_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :header %>
   <p class="mb-0 mt-0">Message</p>
   <%= f.text_area :message, class: "ckeditor" %>
-  <% if (params[:template].eql? 'Weekly Picks') || (@newsletter.template.eql? 'Weekly Picks') %>
+  <% if (params[:template].eql? 'editor_picks') || (@newsletter.template.eql? 'Weekly Picks') %>
     <p class="mb-0 mt-4">Featured Posts (follow the placeholder's format *exactly*)</p>
     <%= f.text_area :featured_posts, placeholder: '[5-new-aesthetics-that-are-dominating-2023, This is a quote by an editor. This article was so well done etc. etc. Emily Johansson],[next url ending..' %>
     <p class="mb-0 mt-0">Subheader</p>
