--- a/app/views/newsletters/previews/_weekly_picks.html.erb
+++ b/app/views/newsletters/previews/_weekly_picks.html.erb
@@ -137,6 +137,7 @@
                           </tr>
                         </tbody>
                       </table>
+                    <% if !(@posts.nil?) %>
                       <% @posts.each_with_index do |post, index| %>
                         <table class="content_wrapper" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;">
                           <tbody>
@@ -241,6 +242,7 @@
                             </tr>
                           </tbody>
                         </table>
+                      <% end %>
                       <% end %>
                     </td>
                   </tr>
