--- a/app/views/newsletters/index.html.erb
+++ b/app/views/newsletters/index.html.erb
@@ -24,6 +24,7 @@
       <% end %>
     </tbody>
   </table>
+  <%== pagy_nav(@pagy).html_safe %>
   <div class="pb-4">
     <div class="btn_cntnr"><%= link_to "New Newsletter", new_newsletter_path, class: "newpost--new--profile", style: "margin-right: 0px;" %></div>
   </div>
