--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,137 +2,138 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #apply_description {
-    min-height: 200px;
+  min-height: 200px;
 }
 
 .criteria {
-    background-color: white;
-    span {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin-bottom: 20px;
-        p {
-            margin: 0;
-            margin-left: 20px;
-        }
+  background-color: white;
+  span {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+    p {
+      margin: 0;
+      margin-left: 20px;
     }
-    .question {
-        margin: 0;
-        font-weight: 800;
-        color: #4abeb6;
-        font-size: 25px;
-    }
+  }
+  .question {
+    margin: 0;
+    font-weight: 800;
+    color: #4abeb6;
+    font-size: 25px;
+  }
 }
 
 .topics {
-    a {
-        font-weight: bold;
+  a {
+    font-weight: bold;
+  }
+  .categories {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+    p {
+      margin: 0;
+      width: 33%;
+      color: #4abeb6;
+      display: inline-block;
+    }
+  }
+  ol {
+    p {
+      margin: 0;
+      font-size: 18px;
+    }
+    .blank {
+      color: #d3d3d3;
+      display: inline-block;
+    }
+  }
+  @media (max-width: 700px) {
+    .categories {
+      p {
+        width: 50%;
+      }
+    }
+  }
+  @media (max-width: 440px) {
+    h3 {
+      margin-bottom: 15px;
     }
     .categories {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        margin-bottom: 30px;
-        p {
-            margin: 0;
-            width: 33%;
-            color: #4abeb6;
-            display: inline-block;
-        }
+      p {
+        width: 100%;
+        margin-left: 23px;
+      }
     }
-    ol {
-        p {
-            margin: 0;
-            font-size: 18px;
-        }
-        .blank {
-            color: #d3d3d3;
-            display: inline-block;
-        }
-    }
-    @media (max-width: 700px) {
-        .categories {
-            p {
-                width: 50%;
-            }
-        }
-    }
-    @media (max-width: 440px) {
-        h3 {
-            margin-bottom: 15px;
-        }
-        .categories {
-            p {
-                width: 100%;
-                margin-left: 23px;
-            }
-        }
-    }
+  }
 }
 
 .theimages {
-    img {
-        width: 70%;
-        display: block;
-        margin-bottom: 20px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  img {
+    width: 70%;
+    display: block;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 #button_nrml {
-    margin: 10px;
-    padding: 0;
-    border: none;
-    text-decoration: underline;
-    color: #4abeb6;
-    &:hover {
-        cursor: pointer;
-    }
+  margin: 10px;
+  padding: 0;
+  border: none;
+  text-decoration: underline;
+  color: #4abeb6;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .analytics_wrapper,
-.newsletters {
-    max-width: 100%;
+.newsletters,
+.subscribers {
+  max-width: 100%;
+  overflow: auto;
+  .scrollmenu {
     overflow: auto;
-    .scrollmenu {
-        overflow: auto;
-        white-space: nowrap;
-    }
+    white-space: nowrap;
+  }
 }
 
 .link_inline {
-    display: inline !important;
+  display: inline !important;
 }
 
 .pitch_preview_wrapper {
-    display: flex;
-    flex-direction: row;
-    .flex_child {
-        width: 50%;
-        display: block;
-        position: relative;
-        img {
-            position: relative;
-            display: block;
-            width: 100%;
-            max-width: 100%;
-        }
+  display: flex;
+  flex-direction: row;
+  .flex_child {
+    width: 50%;
+    display: block;
+    position: relative;
+    img {
+      position: relative;
+      display: block;
+      width: 100%;
+      max-width: 100%;
     }
+  }
 }
 
 .apply_wrapper {
-    position: relative;
-    margin: 0 auto;
-    margin-top: -10%;
-    z-index: 0;
-    background-color: white;
-    padding: 3% 5%;
-    max-width: 800px;
-    width: 90%;
-    h2,
-    h4 {
-        font-family: "Playfair Display";
-    }
+  position: relative;
+  margin: 0 auto;
+  margin-top: -10%;
+  z-index: 0;
+  background-color: white;
+  padding: 3% 5%;
+  max-width: 800px;
+  width: 90%;
+  h2,
+  h4 {
+    font-family: "Playfair Display";
+  }
 }
